--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "clean": "rm -rf build/ && rm -rf dist",
     "build": "./node_modules/.bin/grunt build",
     "preversion": "npm run clean && npm run build && npm run test:full",
+    "prepare": "npm run build",
     "postversion": "git push --no-verify && git push --tags --no-verify"
   },
   "keywords": [
