--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "exceljs",
-  "version": "1.9.1",
+  "version": "1.9.1-PATCH",
   "description": "Excel Workbook Manager - Read and Write xlsx and csv Files.",
   "private": false,
   "license": "MIT",
